--- a/src/components/SideBar/sideBar.scss
+++ b/src/components/SideBar/sideBar.scss
@@ -28,7 +28,7 @@
     .social {
         width: 105px;
         display: flex;
-        margin: 18px auto 60px;
+        margin: 18px auto ;
         list-style: none;
         background-image:url("../../assets/images/sidebar-social.png");
         
@@ -39,8 +39,8 @@
             transition: .3s ease-in-out;
             width: 26px;
             height: 26px;
-            margin-left: -10px;
-            margin-right: 23px;
+            margin-left: -32px;
+            margin-right: 46px;
             border-radius: 50%;
 
             &:hover {
