--- a/src/components/MainLayout/mainLayout.scss
+++ b/src/components/MainLayout/mainLayout.scss
@@ -1,5 +1,11 @@
 .main-layout {
     display: flex;
+    .sidebar-section {
+    
+        @media (max-width: 768px) {
+          display: none; 
+        }
+    }
 }
 
 .main-content {
