--- a/src/pages/ProfilePage/profilePage.scss
+++ b/src/pages/ProfilePage/profilePage.scss
@@ -23,3 +23,12 @@
     text-decoration: underline;
     cursor: pointer;
 }
+@media (max-width: 450px) {
+    .profile-content{
+        flex-direction: column-reverse;
+      
+        .profile-content__form{
+            text-align: center;
+        }
+    }
+}
