--- a/src/App.css
+++ b/src/App.css
@@ -104,4 +104,15 @@ p {
   border-radius: 5px;
   padding: 8px 15px;
   margin-top: 25px;
+}
+
+@media (max-width: 450px) {
+  h5 {
+    margin: 30px 0 50px;
+    text-align: center;
+  }
+  .about-me-content,
+  .article__item {
+    margin-top: 25px;
+  }
 }/*# sourceMappingURL=App.css.map */
