--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,3 @@
-
-
 @import './assets/styles/colors.scss';
 @import './assets/styles/fonts.scss';
 
@@ -76,25 +74,37 @@ p {
   border-radius: 50%;
   margin: 26px 25px;
 }
+
 .profile,
 .article-reading,
 .modal-form {
-    .form-control {
-        background-color: transparent;
-        border-bottom: 1px solid $color-sub_3 !important;
-        border: none;
-        border-radius:0
-    }
+  .form-control {
+    background-color: transparent;
+    border-bottom: 1px solid $color-sub_3 !important;
+    border: none;
+    border-radius: 0
+  }
 
-    label {
-        font-size: 14px;
-        color: $color-sub_3;
-       
-    }
+  label {
+    font-size: 14px;
+    color: $color-sub_3;
 
-    .btn-wright {
-        border-radius: 5px;
-        padding: 8px 15px;
-        margin-top: 25px;
-    }
+  }
+
+  .btn-wright {
+    border-radius: 5px;
+    padding: 8px 15px;
+    margin-top: 25px;
+  }
+}
+
+@media (max-width: 450px) {
+  h5 {
+    margin: 30px 0 50px;
+    text-align: center;
+  }
+  .about-me-content, 
+  .article__item {
+    margin-top: 25px;
+  }
 }
