--- a/src/pages/AdvertisementPage/advertisementPage.css
+++ b/src/pages/AdvertisementPage/advertisementPage.css
@@ -12,13 +12,18 @@
 }
 .my-work .btn-wright {
   border-radius: 5px;
-  margin: 90px 0 25px 214px;
+  margin-top: 40px;
 }
 
 .btn-work {
-  padding: 4px 9px;
+  padding: 4px 14px;
   background: #EA8C1E;
   border-radius: 3px;
   border: none;
-  margin-right: 15px;
+}
+
+@media (max-width: 450px) {
+  .my-work__item {
+    flex-direction: column;
+  }
 }/*# sourceMappingURL=advertisementPage.css.map */
