--- a/src/pages/AdvertisementPage/advertisementPage.scss
+++ b/src/pages/AdvertisementPage/advertisementPage.scss
@@ -19,14 +19,22 @@
 
     .btn-wright {
         border-radius: 5px;
-        margin: 90px 0 25px 214px;
+        margin-top: 40px;
     }
 }
 
 .btn-work {
-    padding: 4px 9px;
+    padding: 4px 14px;
     background: $mywork_btn;
     border-radius: 3px;
     border: none;
-    margin-right: 15px;
+    
+}
+
+@media (max-width: 450px) {
+
+    .my-work__item{
+        flex-direction: column;
+    }
+    
 }
