--- a/src/pages/HomePage/homePage.css
+++ b/src/pages/HomePage/homePage.css
@@ -62,4 +62,10 @@
 }
 .input-group .btn-send {
   background: url(../../assets/images/send-btn.svg) no-repeat center;
-}/*# sourceMappingURL=homePage.css.map */
+}
+
+@media (max-width: 450px) {
+  .about-me-content, .content-box {
+    flex-wrap: wrap;
+  }
+}/*# sourceMappingURL=HomePage.css.map */
