add sarch function

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,10 +31,15 @@ body {
   margin-bottom: 15px;
 }
 
+h3 {
+  text-align: center;
+}
+
 h5 {
   font-size: 21px;
   margin-top: 60px;
 }
+ 
 
 p {
   font-weight: 300;
