--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@ p {
   background-color: transparent;
   border-bottom: 1px solid #757575 !important;
   border: none;
+  color: #FFFFFF;
   border-radius: 0;
 }
 .profile label,
