--- a/src/App.scss
+++ b/src/App.scss
@@ -87,6 +87,7 @@ p {
     background-color: transparent;
     border-bottom: 1px solid $color-sub_3 !important;
     border: none;
+    color:$color_white;
     border-radius: 0
   }
 
