--- a/src/pages/ArticlePage/articlePage.css
+++ b/src/pages/ArticlePage/articlePage.css
@@ -29,4 +29,24 @@
   color: #107EFF;
   text-decoration: none;
   margin-top: 20px;
+}
+
+.comments-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.comments-list .btn {
+  background-color: transparent;
+  margin: 20px 0;
+}
+
+.comment-item {
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.comment-item input {
+  margin-right: 10px;
 }/*# sourceMappingURL=articlePage.css.map */
