--- a/src/pages/ArticlePage/articlePage.scss
+++ b/src/pages/ArticlePage/articlePage.scss
@@ -35,3 +35,21 @@
     text-decoration: none;
     margin-top: 20px;
 }
+.comments-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    .btn{
+        background-color: transparent;
+        margin: 20px 0;
+    }
+}
+.comment-item {
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    input{
+        margin-right: 10px;
+    }
+}
